--- a/OpenWGA/plugins/admin/design/tml/html/webprojects/project/mode-view.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/webprojects/project/mode-view.tml
@@ -81,8 +81,44 @@
 	tabview.deleteCurrentPage();	
 </tml:action>
 
+<tml:action id="clear-caches">
+
+	var dbkey = DBM.getConfigBean().key;
+	var wgadb = db(dbkey);
+	
+	if(!tmlform || tmlform.fieldlist("caches").contains("data")){
+		log.info(dbkey + ": Data Cache cleared");
+		wgadb.refresh();
+	}
+	
+	if(!tmlform || tmlform.fieldlist("caches").contains("file")){
+		var fileCache = wgadb.getAttribute(wgacore.DBATTRIB_FILECACHE);
+		fileCache.clear();
+		log.info(dbkey + ": File Cache cleared");
+	}
+	
+	if(!tmlform || tmlform.fieldlist("caches").contains("tml")){	
+		wgacore.getWebTMLCache().clearForDatabase(wgadb.getDbReference());
+		log.info(dbkey + ": TML Cache cleared");
+	}
+	
+	if(!tmlform || tmlform.fieldlist("caches").contains("user")){
+		wgadb.clearUserCaches();
+		log.info(dbkey + ": User Caches cleared");
+	}
+
+	if(!tmlform || tmlform.fieldlist("caches").contains("ppr")){
+		var pprCache = wgadb.getAttribute(wgacore.DBATTRIB_PPRCACHE);
+		if(pprCache){
+			pprCache.clear();
+			log.info(dbkey + ": PPR Cache cleared");
+		}
+	}
+
+</tml:action>
+
 <tml:eventscript onevent="wga-server-message" ajax="true">
-_server_message = portletEvent.getParameter("msg");
+	_server_message = portletEvent.getParameter("msg");
 </tml:eventscript>
 
 <tml:script>
@@ -206,7 +242,8 @@ _server_message = portletEvent.getParameter("msg");
 					icon: '<tml:url type="file" db="@afw" doc="icons" file="database_lightning.png"/>',		                
 					text: "Clear Caches",
 					handler: function(){
-						DBM.query_clear_chaches();
+						//DBM.query_clear_chaches();
+						WGA.ajax.callAction("<tml:action ref="$setvar" param1="queryClearCache" param2="{true}"/>");
 					}
 				}
 				,"-"
@@ -234,6 +271,22 @@ _server_message = portletEvent.getParameter("msg");
 
 	<tml:inline name="body" scope="local">
 	
+		<tml:case istrue="queryClearCache">
+			<tml:include designdb="@ui" ref="message">
+				<tml:option name="title">Select Caches to be cleared</tml:option>
+				<tml:option name="body">
+					<tml:form id="query-clear-caches" source="none">
+						<tml:input name="caches" type="checkbox"
+							labeled="true"
+							defaultexpression="WGA.createList(['data', 'file', 'tml', 'user', 'ppr'])" 
+							options="Data Cache|data,File Cache|file,WebTML Cache|tml,User Caches|user,Post-Processed Resoures|ppr"
+						/>
+						<br>
+						<tml:button clickaction="clear-caches">Clear</tml:button>
+					</tml:form>					
+				</tml:option>
+			</tml:include>
+		</tml:case>
 
 		<tml:case istrue="_querydelete">
 			<tml:include designdb="@ui" ref="message">
@@ -409,10 +462,6 @@ _server_message = portletEvent.getParameter("msg");
 		<div class="x-hidden" id="cluster">
 			<tml:portlet name="cluster" ref="::cluster:portlet" ajax="true"/>
 		</div>
-		
-		<tml:case condition="DBM.database(_config_bean.key).isReady">
-			<tml:include ref="::dialog-clear-caches"/>
-		</tml:case>				
 		
 	</tml:inline>
 	
