use app.publisheroption instead of db.getAttribute for better string conversions

--- a/OpenWGA/plugins/admin/design/tml/html/webprojects/project/db-info.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/webprojects/project/db-info.tml
@@ -299,11 +299,12 @@
 	<legend>Effective Publisher Options</legend>
 
 	<tml:script>
+		_app = WGA.app(_wgadb);
 		_attributes = _wgadb.getAttributeNames();
 	</tml:script>	
 	<tml:foreach type="itemvalue" item="_attributes" currentvalue="_attribute">
 		<tml:script>
-			_value = _wgadb.getAttribute(_attribute)
+			_value = _app.getPublisherOption(_attribute)
 			_show = false;
 			if(typeof(_value) == "string")
 				_show = true;
