--- a/OpenWGA/plugins/admin/design/scripts/css/wgadmin.css
+++ b/OpenWGA/plugins/admin/design/scripts/css/wgadmin.css
@@ -183,10 +183,12 @@ legend{
 fieldset label{
 	width: 350px;
 	margin-right: 10px;
+	margin-left: 10px;
 	display:block;
 	float:left;
 	text-align: right;
 	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 fieldset label.custom{
