#00005061: Content Manager: added websocket notifications

--- a/OpenWGA/plugins/cm/design/tml/html/cms/action-panel/page-info/mode-content.tml
+++ b/OpenWGA/plugins/cm/design/tml/html/cms/action-panel/page-info/mode-content.tml
@@ -94,6 +94,11 @@
 											content().save();
 											var event=createEvent("CMS_title_changed");
 											portlet.fireEvent(event);
+											
+											WGA.app(WGA.design().db().getDbReference()).fireEvent("page-updated", {
+												structkey: STRUCTKEY
+											})
+											
 										</tml:action>
 									</tml:option>
 								</tml:include>
