--- a/OpenWGA/plugins/cm/design/tml/html/cms/dialogs/edit-content.tml
+++ b/OpenWGA/plugins/cm/design/tml/html/cms/dialogs/edit-content.tml
@@ -62,6 +62,8 @@
 	event=createEvent("CMS_dialog_closed");
 	portlet.fireEvent(event);
 
+	CM.firePageUpdated(_new_structkey);
+
 </tml:action>
 
 <tml:if istrue="_actionDone">
