#00005064: plugin-cmm: Error in plain/modules:render

--- a/OpenWGA/plugins/cm-modules/design/tml/plain/system/include-module.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/plain/system/include-module.tml
@@ -24,6 +24,8 @@
 ## LICENSE END #################################################################
 <tml:script>
 
+	_CM_MODULES = createObject("modules");
+
 	_mod = option("module-config");
 	
 	var title = _mod.selectSingleNode("@title");
