#00005067: Unable to remove page in Content Manager and other access rights problems

--- a/OpenWGA/plugins/cm/design/tml/html/cms/action-panel/content-versions/mode-view.tml
+++ b/OpenWGA/plugins/cm/design/tml/html/cms/action-panel/content-versions/mode-view.tml
@@ -33,13 +33,15 @@
 	var langs={};
 	
 	var sdoc=content().getStructEntry();
+	
 	var contentlist=sdoc.getAllContent(true);
 	_versions = contentlist.size(); 
 	for(var i=0; i<contentlist.size(); i++){
 		var version=contentlist.get(i);
 		var status=version.getStatus();
 
-		if(status!=version.STATUS_RELEASE && !version.mayEditContent())
+
+		if(status!=version.STATUS_RELEASE && !sdoc.mayCreateContent(version.getLanguage()))
 			continue;			
 			
 		if(version.getLanguage().getName()!=LANGUAGE){
