--- a/OpenWGA/plugins/cm/design/tml/html/cms/action-panel/content-versions/mode-view.tml
+++ b/OpenWGA/plugins/cm/design/tml/html/cms/action-panel/content-versions/mode-view.tml
@@ -40,8 +40,7 @@
 		var version=contentlist.get(i);
 		var status=version.getStatus();
 
-
-		if(status!=version.STATUS_RELEASE && !sdoc.mayCreateContent(version.getLanguage()))
+		if(status!=version.STATUS_RELEASE && !version.mayEditContent())
 			continue;			
 			
 		if(version.getLanguage().getName()!=LANGUAGE){
