--- a/OpenWGA/plugins/admin/design/tml/html/home.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/home.tml
@@ -32,8 +32,8 @@
 		
 		<tml:htmlhead/>
 		
-		<tml:include designdb="@ui" ref="include:all" o_theme="gray-extend" o_debug="true"/>
-		<script type="text/javascript" src="<tml:url type="js" name="dbm"/>"></script>		
+		<tml:include designdb="@ui" ref="include:all" o_theme="gray-extend" o_debug="false"/>
+		<script type="text/javascript" src="<tml:url type="js" name="scripts"/>"></script>		
 		
 		<link rel="stylesheet" type="text/css" href="<tml:url type="css" name="wgadmin"/>"/>
 				
@@ -44,11 +44,6 @@
 		<link rel="stylesheet" type="text/css" href="<tml:url type="css" name="::pluginstore"/>"/>
 		
 		<link type="text/css" rel="stylesheet" href="<tml:url type="css" name="SyntaxHighlighter"/>"/>
-		<script src="<tml:url type="js" name="shCore"/>"></script>
-		<script src="<tml:url type="js" name="shBrushCss"/>"></script>
-		<script src="<tml:url type="js" name="shBrushJs"/>"></script>
-		<script src="<tml:url type="js" name="shBrushXml"/>"></script>
-		<script src="<tml:url type="js" name="::Chart.min"/>"></script>
 		
 		<tml:include designdb="@afw" ref="include:jquery" o_jquery-plugins="tabhandler, textarea-autogrow"/>
 		<tml:include designdb="@afw" ref="include:jquery-ui-all"/>
