use wga_file_url to address jquery-ui-css bc. it's no scss

--- a/OpenWGA/plugins/afw/design/scripts/css/jquery-ui.scss
+++ b/OpenWGA/plugins/afw/design/scripts/css/jquery-ui.scss
@@ -1,1 +1,1 @@
-@import "type=file jquery-ui-1.11/build/jquery-ui.css";
+@import url(wga_file_url('plugin-wga-app-framework', 'jquery-ui-1.11', 'build/jquery-ui.css')); 
