#00005104: Content Manager: links created via drag-drop contains XXX in link title

--- a/OpenWGA/plugins/cm/design/tml/html/cms/siteexplorer/entry.tml
+++ b/OpenWGA/plugins/cm/design/tml/html/cms/siteexplorer/entry.tml
@@ -245,7 +245,7 @@
 				return doc.getContentKey(); 
 		</tml:script>",
 		key:structkey,
-		title:"xxx<tml:script>return _Struct.getContentTitleJsEncoded()</tml:script>",
+		title:"<tml:script>return _Struct.getContentTitleJsEncoded()</tml:script>",
 		parent: parentkey,
 		area: "<tml:script>return document.getArea().getName()</tml:script>",
 		isInTemplateArea: <tml:script expression="_Area.isTemplateArea()"/>,
