#00005110: CM "no-content" window don't show published versions of other languages if author has no right to edit contents of those languages

--- a/OpenWGA/plugins/cm/design/tml/html/cms/no-content.tml
+++ b/OpenWGA/plugins/cm/design/tml/html/cms/no-content.tml
@@ -61,7 +61,7 @@
 					// other versions
 					var contentlist = WGA.createList()
 					for(let doc in Iterator(document.getAllContent(document.mayEditPage()))){
-						if(doc.mayEditContent())
+						if(doc.mayEditContent() || doc.getStatus()==doc.STATUS_RELEASE)
 							contentlist.add(doc);
 					}
 					_contentlist=WGA.sortList(contentlist, "status", "down");
