#00005111: CM: dialog "create version" should copy all elements by default

--- a/OpenWGA/plugins/cm/design/tml/html/cms/dialogs/create-content.tml
+++ b/OpenWGA/plugins/cm/design/tml/html/cms/dialogs/create-content.tml
@@ -192,7 +192,10 @@
 							<tr>
 								<td></td>
 								<td>
-									<tml:input name="copy_from_current" type="checkbox" options="{label('dialog.create-content.copy-from-current.options')}"/>
+									<tml:script>
+										_default = WGA.createList(["items", "metas", "attachments", "modules"])
+									</tml:script>
+									<tml:input name="copy_from_current" type="checkbox" defaultexpression="_default" options="{label('dialog.create-content.copy-from-current.options')}"/>
 								</td>
 							</tr>
 						</tml:case>
