#00005114: CM: removed linkchecker proxy config from Content Manager

--- a/OpenWGA/plugins/cm/design/tml/html/cms/dialogs/check-links.tml
+++ b/OpenWGA/plugins/cm/design/tml/html/cms/dialogs/check-links.tml
@@ -28,29 +28,11 @@
 	
 	_link_errors=createlist();
 	
-	// check external links:	
-	var checker = new Packages.de.innovationgate.igutils.LinkChecker();
-	
-	// set Proxy parameter from setup document
-	var checker_proxy = new Packages.de.innovationgate.igutils.LinkChecker();
-	var config=context("currentdocument/name:$linkchecker", false);
-	if(config && config.useproxy=="true"){
-		//log.info("use proxy settings " + config.proxyhost + ":"+ config.proxyport);
-		try{
-			if(config.useproxylogin=="true")
-				checker_proxy.setProxy(config.proxyhost, config.proxyport, config.proxyusername, config.proxypassword);
-			else checker_proxy.setProxy(config.proxyhost, config.proxyport);
-		}
-		catch(e){
-			tmlform.addMessage(e);
-		}
-		var proxyexceptions=createlist(config.proxyexceptions.replace(/ /g,""), ",");
-	}
-	else var proxyexceptions=createlist();
-
 	if(tmlform.hasMessages())
 		return;
-	// end linkchecker proxy setup
+
+	// check external links:	
+	var checker = new Packages.de.innovationgate.contentmanager.modules.LinkChecker();
 	
 	var urls=tmlform.fieldlist("_externallinks").iterator();
 	while(urls.hasNext()){
@@ -66,11 +48,8 @@
 		var domain = relurl.split("/")[0]
 		domain=domain.split(":")[0]		// ignore port
 		try{
-			var code;			
-			if(proxyexceptions.contains(domain))
-				code = checker.check(url);
-			else code = checker_proxy.check(url);
-		}catch(e){
+			var code = checker.check(url);
+		} catch(e){
 			tmlform.addMessage(url + ": " + e.message);
 			_link_errors.add({url:url, msg:e.message});
 		}
